--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GrafanaSettings": {
+    "BaseUri": {
+      "Prod": "https://${org}.apps.altinn.no",
+      "Test": "https://${org}.apps.tt02.altinn.no"
+    }
+  },
+  "StudioSettings": {
+    "BaseUri": "https://altinn.studio/designer/api"
+  }
 }
