--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -82,11 +82,13 @@ jobs:
       - name: Comment PR with Lighthouse Report
         if: github.event_name == 'pull_request' && steps.lighthouse-ci.outputs.report_url != ''
         uses: actions/github-script@v7
+        env:
+          REPORT_URL: ${{ steps.lighthouse-ci.outputs.report_url }}
         with:
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🔍 **Lighthouse Report**\n\n📊 [View Performance Report](${{ steps.lighthouse-ci.outputs.report_url }})'
+              body: '🔍 **Lighthouse Report**\n\n📊 [View Performance Report](${{ env.REPORT_URL }})'
             });
