--- a/App/App.csproj
+++ b/App/App.csproj
@@ -6,12 +6,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Altinn.App.Api" Version="8.7.0-preview.3">
+    <PackageReference Include="Altinn.App.Api" Version="8.9.0-preview.2">
       <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
     </PackageReference>
-    <PackageReference Include="Altinn.App.Core" Version="8.7.0-preview.3" />
-    <PackageReference Include="Altinn.Codelists" Version="8.0.0-rc.1" />
-    <PackageReference Include="Altinn.FileAnalyzers" Version="8.0.0-rc.1" />
+    <PackageReference Include="Altinn.App.Core" Version="8.9.0-preview.2" />
+    <PackageReference Include="Altinn.Codelists" Version="8.0.2" />
+    <PackageReference Include="Altinn.FileAnalyzers" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
