chore: scale old pdf generator back to 0

--- a/infra/runtime/syncroot/base/pdf.yaml
+++ b/infra/runtime/syncroot/base/pdf.yaml
@@ -82,6 +82,6 @@ spec:
         namespace: default
   values:
     environment: ${ENVIRONMENT}
-    # replicaCount: 0
-    # autoscaling:
-    #   enabled: false
+    replicaCount: 0
+    autoscaling:
+      enabled: false
