chore: make parallellism configurable

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -157,5 +157,10 @@
     },
     "SchedulingSettings": {
         "UsePersistentScheduling": false
+    },
+    "ParallellismSettings": {
+        "FetchFilesFromGitea": 25,
+        "UploadFilesToOrgLibrary": 10,
+        "RepositoryBaseSI": 50
     }
 }
