--- a/src/Runtime/pdf3/infra/kustomize/base/worker.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/worker.yaml
@@ -39,7 +39,7 @@ spec:
       name: cpu
       target:
         type: Utilization
-        averageUtilization: 60
+        averageUtilization: 40
   behavior:
     scaleUp:
       stabilizationWindowSeconds: 0
@@ -47,11 +47,12 @@ spec:
       - type: Pods
         # Limits scaleup of at most 2 pods per 10 second period
         # With the current node size it won't take long before new nodes need to be added to the cluster
-        value: 2
+        value: 5
         periodSeconds: 10
     scaleDown:
-      # When evaluating the policy, takes the max metric value from the past 5 minutes
-      stabilizationWindowSeconds: 300
+      # When evaluating the policy, takes the max metric value from the past 1 hour
+      # This ensures we keep scaled up capacity for at least 1 hour after a spike
+      stabilizationWindowSeconds: 3600
       policies:
       - type: Pods
         # If we've seen lots of traffic we should be careful when scaling down
@@ -229,8 +230,8 @@ spec:
             requests:
               # With the current nodes in AKS, the browser instance
               # can easily saturate a core (1000m). But it won't do that
-              # all the time, so settling on 750m for reserving capacity
-              cpu: 750m
+              # all the time, so settling on 500m for reserving capacity
+              cpu: 500m
               memory: 1Gi
           volumeMounts:
           - mountPath: /tmp
