chore: pdf fix autoscaling

--- a/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
@@ -98,9 +98,9 @@ spec:
   minReadySeconds: 3
   revisionHistoryLimit: 5
   progressDeadlineSeconds: 60
-  # 1 replica per availability zone by default (hopefully)
-  # See podAntiAffinity and topologySpreadConstraints below
-  replicas: 3
+  # NOTE: we don't specify replicas here as
+  # as that would force flux to override replicas
+  # set by HPA
   strategy:
     # Rolling upgrade of pods
     type: RollingUpdate
