--- a/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
@@ -50,7 +50,7 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/imagePullPolicy
         value: "Always"
-      - op: replace
+      - op: add
         path: /spec/replicas
         value: 2
   - target:
@@ -68,7 +68,7 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/imagePullPolicy
         value: "Always"
-      - op: replace
+      - op: add
         path: /spec/replicas
         value: 2
   # Delete HPA for proxy
