--- a/.github/workflows/auto-approve-pr.yaml
+++ b/.github/workflows/auto-approve-pr.yaml
@@ -4,6 +4,10 @@ on:
   pull_request_target:
     types: [ opened, synchronize, reopened, labeled ]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   label-and-approve:
     runs-on: ubuntu-latest
