Update service account

--- a/infra/runtime/syncroot/base/grafana/service-accounts/altinn-studio-gateway-sa.yaml
+++ b/infra/runtime/syncroot/base/grafana/service-accounts/altinn-studio-gateway-sa.yaml
@@ -1,14 +1,12 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaServiceAccount
 metadata:
-  name: altinn-studio-gateway-sa
+  name: external-grafana-altinn-studio-gateway-sa
   namespace: grafana
 spec:
-  instanceName: 'external-grafana'
-  isDisabled: false
+  instanceName: external-grafana
   name: altinn-studio-gateway-sa
   role: Editor
-  suspend: false
   tokens:
     - name: studio-gateway
-      secretName: studio-gateway-grafana-token
+      secretName: external-grafana-altinn-studio-gateway-token
