--- a/infra/runtime/syncroot/base/grafana/contact-points/kustomization.yaml
+++ b/infra/runtime/syncroot/base/grafana/contact-points/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - altinn-studio-gateway.yaml
-  - altinn-studio-slack.yaml
+  - altinn-slack.yaml
