--- a/infra/runtime/syncroot/base/grafana/notification-policies/altinn.yaml
+++ b/infra/runtime/syncroot/base/grafana/notification-policies/altinn.yaml
@@ -1,7 +1,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaNotificationPolicy
 metadata:
-  name: external-grafana-altinn-studio
+  name: external-grafana-altinn
   namespace: grafana
 spec:
   instanceSelector:
@@ -19,7 +19,7 @@ spec:
             - =
             - Altinn
         repeat_interval: 5m
-      - receiver: altinn-studio-slack
+      - receiver: altinn-slack
         object_matchers:
           - - Type
             - =
