--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -32,32 +32,45 @@ jobs:
           # Verify host resolution
           getent hosts local.altinn.cloud
 
-      - name: Start LocalTest and component-library
+      - name: Build localtest and component-library
+        working-directory: '.'
         run: |
-          # Start LocalTest backend build in background
-          (cd src/Runtime/localtest && docker compose up -d --build) & DOCKER_PID=$!
-          echo "Waiting for backend at http://local.altinn.cloud:80/"
+          # Build localtest in background
+          cd src/Runtime/localtest
+          docker compose build &
+          LOCALTEST_PID=$!
 
-          # Build .NET app in foreground
+          # Build component-library app in foreground
           cd src/test/apps/component-library/App
           dotnet restore
           dotnet build --no-restore
 
-          # Wait for background processes
-          wait $DOCKER_PID
+          wait $LOCALTEST_PID
 
-          # Now start services and wait for readiness
-          timeout 120 bash -c 'until curl -f http://local.altinn.cloud/ > /dev/null 2>&1; do sleep 2; done'
-
+      - name: Start localtest and component-library
+        run: |
           # Start the app in background
+          cd src/test/apps/component-library/App
           nohup dotnet run --no-build > app.log 2>&1 & APP_PID=$!
 
-          # Then do the health check with more attempts
+          # Start localtest
+          echo "Starting localtest..."
+          cd src/Runtime/localtest && docker compose up -d
+
+          # Wait for localtest readiness
+          echo "Waiting for localtest at http://local.altinn.cloud/"
+          if timeout 120 bash -c 'until curl -f http://local.altinn.cloud/ > /dev/null 2>&1; do sleep 2; done'; then
+            echo "✅ localtest is ready!"
+          else
+            echo "❌ localtest failed to start within 2 minutes."
+          fi
+
+          # Wait for app readiness
           echo "Waiting for app to start listening on port 5005..."
           if timeout 120 bash -c 'until grep -q "Now listening on: http://\[::]:5005" app.log 2>/dev/null; do sleep 1; done'; then
             echo "✅ App is ready!"
           else
-            echo "❌ App failed to start within 2 minutes"
+            echo "❌ App failed to start within 2 minutes."
             echo "=== App log ==="
             cat app.log
             kill $APP_PID 2>/dev/null || true
