--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -40,6 +40,9 @@ jobs:
           docker compose build &
           LOCALTEST_PID=$!
 
+          # Return to workspace root
+          cd $GITHUB_WORKSPACE
+
           # Build component-library app in foreground
           cd src/test/apps/component-library/App
           dotnet restore
@@ -53,6 +56,9 @@ jobs:
           cd src/test/apps/component-library/App
           nohup dotnet run --no-build > app.log 2>&1 & APP_PID=$!
 
+          # Return to workspace root
+          cd $GITHUB_WORKSPACE
+
           # Start localtest
           echo "Starting localtest..."
           cd src/Runtime/localtest && docker compose up -d
@@ -65,14 +71,17 @@ jobs:
             echo "❌ localtest failed to start within 2 minutes."
           fi
 
+          # Return to workspace root
+          cd $GITHUB_WORKSPACE
+
           # Wait for app readiness
           echo "Waiting for app to start listening on port 5005..."
-          if timeout 120 bash -c 'until grep -q "Now listening on: http://\[::]:5005" app.log 2>/dev/null; do sleep 1; done'; then
+          if timeout 120 bash -c 'until grep -q "Now listening on: http://\[::]:5005" src/test/apps/component-library/App/app.log 2>/dev/null; do sleep 1; done'; then
             echo "✅ App is ready!"
           else
             echo "❌ App failed to start within 2 minutes."
             echo "=== App log ==="
-            cat app.log
+            cat src/test/apps/component-library/App/app.log
             kill $APP_PID 2>/dev/null || true
             exit 1
           fi
