--- a/.github/workflows/auto-approve-pr.yaml
+++ b/.github/workflows/auto-approve-pr.yaml
@@ -12,11 +12,6 @@ jobs:
   label-and-approve:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout PR code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-
       - name: Label PR based on changed files
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5
         with:
@@ -25,7 +20,7 @@ jobs:
       - name: Check if auto-approval is needed
         id: check-labels
         run: |
-          labels=$(gh pr view ${{ github.event.pull_request.number }} --json labels --jq '.labels[].name')
+          labels=$(gh pr view ${{ github.event.pull_request.number }} --repo "${{ github.repository }} --json labels --jq '.labels[].name')
           if echo "$labels" | grep -qE '^(skip-manual-testing|skip-second-approval)$'; then
             echo "should_approve=true" >> $GITHUB_OUTPUT
           else
@@ -36,6 +31,6 @@ jobs:
 
       - name: Auto approve PR
         if: steps.check-labels.outputs.should_approve == 'true'
-        run: gh pr review ${{ github.event.pull_request.number }} --approve
+        run: gh pr review ${{ github.event.pull_request.number }} --repo "${{ github.repository }} --approve
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
